fix shortcuts on tablet horizontal

--- a/client/templates/style/scores_list.less
+++ b/client/templates/style/scores_list.less
@@ -63,3 +63,32 @@
   .result-text;
 
 }
+
+/*---------------------------
+  Media Queries
+----------------------------*/
+
+@media all and (min-width: 1200px) {
+
+  .scores {
+
+    background-color: white;
+
+  }
+
+  .score {
+
+    width: 25%;
+    display: inline-block;
+    margin-left: -5px;
+    border-right: 0.1rem solid white;
+
+  }
+
+  .scores li:nth-child(4) {
+    
+    border-right: none;
+
+  }
+
+}
