--- a/client/templates/style/shortcuts_list.less
+++ b/client/templates/style/shortcuts_list.less
@@ -20,3 +20,34 @@
   border-bottom: 0.15rem solid white;
 
 }
+
+
+/*---------------------------
+  Media Queries
+----------------------------*/
+
+@media all and (min-width: 1200px) {
+
+  .shortcuts {
+
+    background-color: white;
+
+  }
+
+  .shortcut {
+
+    width: 33.333%;
+    display: inline-block;
+    margin-left: -5px;
+    border-right: 0.1rem solid white;
+    background-color: @green;
+
+  }
+
+  .scores li:nth-child(4) {
+    
+    border-right: none;
+
+  }
+
+}
